<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
           xmlns:ns1="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inden Sales</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!-- ... -->
    <string name="facebook_application_id" translatable="false">269716826826589</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb269716826826589</string>
    <string name="MAPS_API_KEY" translatable="false">AIzaSyAirlCKXdLa_rGycn9BphN5JQDPtZ8IokM</string>
    <string name="action_search" translatable="false">Search</string>

    <!-- - - - - - - - - - - - - - -
     - Used by SunshineDateUtils  -
     - - - - - - - - - - - - - - -->

    <!-- Date format -->
    <string name="format_full_friendly_date" translatable="false">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>


    <!-- for searching clients -->
    <string name="search_clients_hint">Search for Clients</string>

    <string name="search_articles_hint">Search for Articles by name or code</string>

    <string name="function_not_available">Function not available</string>

    <string name="sales_activity_title">Articles for sale</string>

    <string name="clients_fragment_title">Clients</string>
    <string name="sales_fragment_title">My Sales</string>

    <string name="client_addresses_fragment_title">Client Addresses</string>
    <string name="total_article_price">Total</string>
    <string name="add_sale_button">Sale</string>
    <string name="client_name">Not Available</string>
    <string name="make_sale_button">Make Sale</string>
    <string name="sale_not_aproved">Sale not Aproved</string>
    <string name="client_address">Not Available</string>
    <string name="client_commune">Not Available</string>
    <string name="client_city">Not Available</string>
    <string name="client_phone">Not Available</string>
    <string name="client_zone">Not Available</string>
    <string name="total_price">Total</string>
    <string name="title_activity_create_sale">Creat Sale</string>
    <string name="message_when_signed_in_part1">You are now signed in, welcome </string>
    <string name="message_when_signed_in_part2"> to inden Sales!</string>
    <string name="summary_sale">summary</string>
    <string name="reset_sale">Reset</string>
    <string name="client_details_sale">Client Details</string>
    <string name="title_sale_cancellation_dialog">You have articles in sale car</string>
    <string name="message_sale_cancellation_dialgo_1">You have&#160;</string>
    <string name="message_sale_cancellation_dialgo_2">&#160;article added to Sale\nAre you sure you want to cancel this sale?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_in">Sign in!</string>
    <string name="sign_in_canceled">Sing in canceled</string>
    <string name="message_sale_made">You have made a sale</string>

    <string name="client_address_activity_title">Select an Address</string>
    <string name="no_article_added_message">Add an article to sale</string>
    <string name="empty_sales_report_message">You do not have sales registered</string>
    <string name="see_articles_in_sale">see articles in sale</string>
    <string name="aproved_sale">aproved</string>

    <string name="user_rol_salesclerk">Salesclerk</string>
    <string name="user_rol_admin">Administrator</string>
    <string name="user_rol_guest">Guest</string>

    <string name="add_clients_to_user">Add clients</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="rut" translatable="false">Rut</string>
    <string name="phone">phone</string>

    <string name="label_full_name">Full Name</string>
    <string name="label_phone">Phone</string>
    <string name="label_email">Email</string>
    <string name="label_rut">Rut</string>
    <string name="label_rol">Role</string>

    <string name="user_role_admin">Admin</string>
    <string name="user_role_salesclerk">Salesclerk</string>
    <string name="user_role_guest">Guest</string>

    <string name="message_spinner_user_role">The user is now a</string>
    <string name="saved">Saved</string>
    <string name="value">Value</string>

    <string name="users_fragment_title">Users</string>
    <string name="quantity">Quantity</string>
    <string name="money_symbol" translatable="false">$</string>
    <string name="no_client_found">No client found.</string>
    <string name="no_sales_found">No sales found</string>

    <string name="edit_user_activity_label">Edit User</string>

    <!-- firebaseui auth strings -->

    <string name="button_text_save">Save</string>
    <string name="button_text_send">Send</string>
    <string name="confirm_recovery_body">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="create_account_preamble">"By tapping SAVE you are indicating that you agree to the "</string>

    <string name="email_account_creation_error">Email account registration unsuccessful</string>
    <string name="email_hint">Email</string>
    <string name="error_email_does_not_exist">That email address doesn\'t match an existing account</string>
    <string name="error_user_collision">An account already exists with that email address.</string>
    <string name="general_error">An error has occurred.</string>
    <string name="idp_name_facebook">Facebook</string>
    <string name="idp_name_google">Google</string>
    <string name="idp_name_twitter">Twitter</string>
    <string name="invalid_email_address">That email address isn\'t correct</string>
    <string name="missing_email_address">Enter your email address to continue</string>
    <string name="name_hint">First &amp; last name</string>
    <string name="next_default">Next</string>
    <string name="password_hint">Password</string>
    <string name="password_recovery_body">Get instructions sent to this email that explain how to
        reset your password.</string>
    <string name="progress_dialog_checking_accounts">Checking for existing accounts…</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_sending">Sending…</string>
    <string name="progress_dialog_signing_in">Signing in…</string>
    <string name="progress_dialog_signing_up">Signing up…</string>
    <string name="required_field">You can\'t leave this empty.</string>
    <string name="sign_in_default">Sign in</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="title_confirm_recover_password">Check your email</string>
    <string name="title_recover_password_activity">Recover password</string>
    <string name="title_register_email">Sign up</string>
    <string name="title_welcome_back_password_prompt">@string/sign_in_default</string>
    <string name="trouble_signing_in">Trouble signing in?</string>
    <string name="twitter_consumer_key" translatable="false">CHANGE-ME</string>
    <string name="twitter_consumer_secret" translatable="false">CHANGE-ME</string>
    <string name="welcome_back_email_header">Welcome back!</string>
    <string name="welcome_back_idp_header">You already have an account</string>
    <string name="welcome_back_idp_prompt">
        You\'ve already used <ns1:g example="jane.doe@example.com" id="email_addr">%1$s</ns1:g>.
        Sign in with <ns1:g example="Google" id="provider_name">%2$s</ns1:g> to continue.
    </string>
    <string name="welcome_back_password_prompt_body">
        You\'ve already used <ns1:g example="jane.doe@example.com" id="email_addr">%1$s</ns1:g>
        to sign in. Enter your password for that account.
    </string>

    
    <!-- Popup menu user -->
    <string name="edit_user_popup_menu_title">Edit user</string>
    <string name="add_or_remove_clients_popup_menu_title">Add or remove clients</string>
    <string name="default_phone">Phone</string>
    <string name="default_text_user_name">User Name</string>
    <string name="default_user_rut">User Rut</string>
    <string name="default_user_email">User Email</string>
    <string name="default_user_rol">User Role</string>
    <string name="title_welcome_back_idp_prompt">\@string/sign_in_default</string>
    <string name="you_don_t_have_access_to_this_data">You don\'t have access to this data</string>

    <string name="permission_denied_message">You don\'t have permission for this operation</string>
    <string name="sale_aproved_message">Sale approved</string>
    <string name="sale_disaproved_message">Sale disapproved</string>

    <string name="check_with_your_admin_message">Check with your Administrator</string>


</resources>
