<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/narrowCardViewMargin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    card_view:contentPaddingBottom="8dp"
    card_view:contentPaddingLeft="16dp"
    card_view:contentPaddingRight="16dp"
    card_view:contentPaddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/ll_client_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_client_name_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/color_dark_grey_primary"
                    android:textSize="18sp"
                    tools:text="Long placeholder location that should wrap to more than 2 lines of text" />

                <TextView
                    android:id="@+id/tv_client_rut_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAllCaps="true"
                    android:textColor="@color/color_light_grey_primary"
                    android:textSize="16sp"
                    tools:text="30km S of" />

                <TextView
                    android:id="@+id/tv_client_address_sale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/color_light_grey_primary"
                    android:textSize="16sp"
                    tools:text="30km S of" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_time_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/color_light_grey_primary"
                    android:textSize="12sp"
                    tools:text="Mar 6, 2010" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/color_light_grey_primary"
                    android:textSize="12sp"
                    tools:text="3:00 PM" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/tw__composer_light_gray"/>

        <LinearLayout
            android:id="@+id/ll_total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/money_symbol"
                android:textColor="@color/mainThemePC"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_total_price_sale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center"
                android:maxLines="1"
                android:textColor="@color/mainThemePC"
                android:textSize="24sp"
                tools:text="8.9" />

            <Switch
                android:id="@+id/sw_aprob_sale_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:checked="false"
                android:maxLines="1"
                android:text="@string/aproved_sale"
                android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_see_articles_in_sale"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/see_articles_in_sale"
            android:textColor="@color/mainThemeAC"/>

    </LinearLayout>



</android.support.v7.widget.CardView>